Accelerate thumnailgenerator when loading JpegContent

Summary:
JpegContent::load() is extensively called by the ThumbnailGenerator. Its major purpose is to retrieve EXIF data from a file, if available also an embedded thumbnail. This change memory maps the file, rather than reading it all in using QFile::readAll(). This should also explain the heavy load pointed out in https://bugs.kde.org/show_bug.cgi?id=331435 .

BUG: 331435

Reviewers: #gwenview, ngraham

Reviewed By: #gwenview, ngraham

Subscribers: ngraham, cfeck, #gwenview

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D21260